continue integrating repository facade with modb