@@ -25,7 +25,7 @@
 
     <!-- modb -->
     <dependency>
-      <groupId>dk.di.ku.dms.vms</groupId>
+      <groupId>dk.di.ku.dms.vms.modb</groupId>
       <artifactId>modb</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
@@ -39,5 +39,24 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <plugins>
+
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>18</source>
+          <target>18</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.foreign</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
 
 </project>
